--- a/requirements.txt
+++ b/requirements.txt
@@ -10,7 +10,9 @@ django-widget-tweaks==1.4.1
 djangorestframework==3.6.2
 gunicorn==19.7.1
 lxml==3.7.3
+MySQL-python==1.2.5
 packaging==16.8
 pyparsing==2.2.0
 python-ldap==2.4.32
+setproctitle==1.1.10
 six==1.10.0
