Removed hard coded url for typeahead, lint cleanup

--- a/src/js/.eslintrc.json
+++ b/src/js/.eslintrc.json
@@ -8,7 +8,8 @@
   },
   "globals": {
     "Bloodhound": true,
-    "tinymce": true
+    "tinymce": true,
+    "ANNOUNCEMENTS_CONST": true
   },
   "extends": "eslint:recommended",
   "parserOptions": {
