Added configuration to set expirations on announcements and redirect all expired announcements.

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,25 +1,25 @@
-Django==1.11.18
-Markdown==2.6.9
 appdirs==1.4.3
 beautifulsoup4==4.5.3
 bleach==2.0.0
 bs4==0.0.1
+Django==1.11.18
 django-auth-ldap==1.2.10
 django-cors-headers==2.0.2
+django-filter==1.1.0
 django-taggit==0.22.0
 django-taggit-serializer==0.1.5
 django-widget-tweaks==1.4.5
-django-filter==1.1.0
 djangorestframework==3.6.2
 drf-dynamic-fields==0.3.0
 gunicorn==19.7.1
 html5lib==0.999999999
 lxml==3.7.3
-MySQL-python==1.2.5
+Markdown==2.6.9
+mysqlclient==1.4.6
 packaging==16.8
 pyparsing==2.2.0
 python-ldap==2.4.32
+pytz==2023.3.post1
 setproctitle==1.1.10
 six==1.10.0
 webencodings==0.5.1
-wsgiref==0.1.2
