--- a/requirements.txt
+++ b/requirements.txt
@@ -1,20 +1,20 @@
 appdirs==1.4.3
+asgiref==3.7.2
 beautifulsoup4==4.5.3
-bleach==2.0.0
+bleach==6.0.0
 bs4==0.0.1
-Django==1.11.18
-django-auth-ldap==1.2.10
-django-cors-headers==2.0.2
-django-filter==1.1.0
-django-taggit==0.22.0
-django-taggit-serializer==0.1.5
-django-widget-tweaks==1.4.5
-djangorestframework==3.6.2
+Django==4.1.13
+django-auth-ldap==4.6.0
+django-cors-headers==4.3.1
+django-filter==23.5
+django-taggit==5.0.1
+django-widget-tweaks==1.5.0
+djangorestframework==3.14.0
 drf-dynamic-fields==0.3.0
 gunicorn==19.7.1
 html5lib==0.999999999
 Markdown==2.6.9
-mysqlclient==1.4.2.post1
+mysqlclient==2.2.0
 packaging==16.8
 pyasn1==0.4.5
 pyasn1-modules==0.2.5
@@ -24,4 +24,5 @@ python-ldap==3.2.0
 pytz==2019.1
 setproctitle==1.1.10
 six==1.10.0
+sqlparse==0.4.4
 webencodings==0.5.1
