--- a/package.json
+++ b/package.json
@@ -3,9 +3,9 @@
   "private": true,
   "devDependencies": {
     "babel-eslint": "^7.2.3",
-    "browser-sync": "^2.18.8",
     "babel-plugin-transform-es2015-modules-strip": "^0.1.1",
     "babel-preset-es2015": "^6.24.1",
+    "browser-sync": "^2.18.8",
     "eslint": "^3.19.0",
     "gulp": "^3.9.1",
     "gulp-babel": "^6.1.2",
@@ -14,10 +14,11 @@
     "gulp-eslint": "^3.0.1",
     "gulp-eslint-if-fixed": "^1.0.0",
     "gulp-rename": "^1.2.2",
-    "gulp-sass": "^3.1.0",
-    "gulp-scss-lint": "^0.4.0",
     "gulp-uglify": "^2.1.2",
     "merge": "^1.2.0",
     "scss-lint": "0.0.0"
+  },
+  "dependencies": {
+    "sass": "^1.69.5"
   }
 }
