--- a/requirements.txt
+++ b/requirements.txt
@@ -11,7 +11,7 @@ django-taggit==5.0.1
 django-widget-tweaks==1.5.0
 djangorestframework==3.14.0
 drf-dynamic-fields==0.3.0
-gunicorn==19.7.1
+gunicorn==20.1.0
 html5lib==0.999999999
 Markdown==3.0
 mysqlclient==2.2.0
@@ -26,3 +26,4 @@ setproctitle==1.1.10
 six==1.16.0
 sqlparse==0.4.4
 webencodings==0.5.1
+whitenoise==6.4.0
