Added initial logic for env file configuration

--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ bs4==0.0.1
 Django==4.1.13
 django-auth-ldap==4.6.0
 django-cors-headers==4.3.1
+django-environ==0.11.2
 django-filter==23.5
 django-taggit==5.0.1
 django-widget-tweaks==1.5.0
