fix static files bug

--- a/config/nginx/announcements.conf
+++ b/config/nginx/announcements.conf
@@ -6,6 +6,12 @@ error_log                   /var/log/nginx/announcements.error.log;
 server {
   server_name               .127.0.0.1;
   listen                    8000;
+  
+  location /static {
+    autoindex off;
+    alias /app/static;
+}
+
   location / {
     proxy_pass              http://localhost:127;
     proxy_set_header        Host $host;
