--- a/helm/values.yaml
+++ b/helm/values.yaml
@@ -6,7 +6,7 @@ replicaCount: 1
 
 image:
   repository: public.ecr.aws/x7a1r0o7/announcements
-  pullPolicy: IfNotPresent
+  pullPolicy: Always
   # Overrides the image tag whose default is the chart appVersion.
   tag: "latest"
 
