--- a/config/nginx/announcements.conf
+++ b/config/nginx/announcements.conf
@@ -5,15 +5,18 @@ error_log                   /var/log/nginx/announcements.error.log;
 # This configuration will be changed to redirect to HTTPS later
 server {
   server_name               .127.0.0.1;
-  listen                    8000;
+  listen                    80;
   
   location /static {
     autoindex off;
     alias /app/static;
-}
+  }
 
   location / {
-    proxy_pass              http://localhost:8000;
+    proxy_pass              http://localhost:127;
     proxy_set_header        Host $host;
+    proxy_set_header X-Real-IP $remote_addr;
+    proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+    proxy_set_header X-Forwarded-Proto $scheme; 
   }
 }
