--- a/helm/values.yaml
+++ b/helm/values.yaml
@@ -45,11 +45,12 @@ service:
   port: 80
 
 ingress:
-  enabled: false
+  enabled: true
   className: ""
-  annotations: {}
-    # kubernetes.io/ingress.class: nginx
+  annotations: {
+    kubernetes.io/ingress.class: nginx
     # kubernetes.io/tls-acme: "true"
+  }
   hosts:
     - host: chart-example.local
       paths:
