--- a/helm/templates/deployment.yaml
+++ b/helm/templates/deployment.yaml
@@ -50,6 +50,11 @@ spec:
           volumeMounts:
             {{- toYaml . | nindent 12 }}
           {{- end }}
+          env:
+          - name: HOST_IP
+          valueFrom:
+            fieldRef:
+              fieldPath: status.hostIP
       {{- with .Values.volumes }}
       volumes:
         {{- toYaml . | nindent 8 }}
