--- a/requirements.txt
+++ b/requirements.txt
@@ -2,12 +2,14 @@ appdirs==1.4.3
 asgiref==3.7.2
 beautifulsoup4==4.5.3
 bleach==6.0.0
+boto3==1.26.59
 bs4==0.0.1
 Django==4.1.13
 django-auth-ldap==4.6.0
 django-cors-headers==4.3.1
 django-environ==0.11.2
 django-filter==23.5
+django-storages==1.13.2
 django-taggit==5.0.1
 django-widget-tweaks==1.5.0
 djangorestframework==3.14.0
