working dev container

--- a/helm/values.yaml
+++ b/helm/values.yaml
@@ -52,17 +52,11 @@ ingress:
     # kubernetes.io/tls-acme: "true"
   }
   hosts:
-    - host: chart-example.local
+    - host: "*.amazonaws.com"
       paths:
         - path: /*
           pathType: ImplementationSpecific
-        - path: /static
-          pathType: Prefix
-          backend:
-            service:
-              name: static-content
-              port:
-                number: 80
+  
   tls: []
   #  - secretName: chart-example-tls
   #    hosts:
