--- a/helm/templates/service.yaml
+++ b/helm/templates/service.yaml
@@ -9,7 +9,7 @@ spec:
   ports:
     - port: {{ .Values.service.port }}
       targetPort: http
-      protocol: TCP
+      protocol: http
       name: http
   selector:
     {{- include "helm.selectorLabels" . | nindent 4 }}
