--- a/helm/templates/service.yaml
+++ b/helm/templates/service.yaml
@@ -8,7 +8,7 @@ spec:
   type: {{ .Values.service.type }}
   ports:
     - port: {{ .Values.service.port }}
-      NodePort: 8000
+      targetPort: http
       protocol: TCP
       name: http
   selector:
