--- a/helm/values.yaml
+++ b/helm/values.yaml
@@ -75,10 +75,12 @@ livenessProbe:
   httpGet:
     path: /
     port: 8000
+  initialDelaySeconds: 5
 readinessProbe:
   httpGet:
     path: /
     port: 8000
+  initialDelaySeconds: 5
 
 autoscaling:
   enabled: false
