--- a/helm/templates/service.yaml
+++ b/helm/templates/service.yaml
@@ -11,5 +11,9 @@ spec:
       targetPort: 8000
       protocol: TCP
       name: http
+    - port: 443
+      name: https
+      targetPort: 8000
+
   selector:
     {{- include "helm.selectorLabels" . | nindent 4 }}
