--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -32,6 +32,10 @@ jobs:
           ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
           ECR_REPOSITORY: announcements
           IMAGE_TAG: ${{ steps.get-commit-hash.outputs.commit-hash }}
+          ALLOWED_HOSTS: ${{ secrets.ALLOWED_HOSTS }}
+          DATABASE_URL: ${{ secrets.DATABASE_URL }}
+          STATIC_URL: ${{ secrets.STATIC_URL }}
+          STATIC_ROOT: ${{ secrets.STATIC_ROOT }}
         run: |
-          docker build -f Containerfile -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG .
-          docker push $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
+          podman build -f Containerfile -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG .
+          podman push $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
