--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -18,17 +18,20 @@ jobs:
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           aws-region: us-east-1
 
-      - name: Login to Amazon ECR
-        id: login-ecr
-        uses: aws-actions/amazon-ecr-login@v1
+      - name: Login to Amazon ECR Public
+        id: login-ecr-public
+        uses: aws-actions/amazon-ecr-login@v2
+        with:
+          registry-type: public
 
       - name: Get commit hash
         id: get-commit-hash
         run: echo "::set-output name=commit-hash::$(git rev-parse --short HEAD)"
 
-      - name: Build, tag, and push the image to Amazon ECR
+      - name: Build, tag, and push docker image to Amazon ECR Public
         id: build-image
         env:
+          REGISTRY: ${{ steps.login-ecr-public.outputs.registry }}
           ECR_REPOSITORY: announcements
           IMAGE_TAG: ${{ steps.get-commit-hash.outputs.commit-hash }}
           ALLOWED_HOSTS: ${{ secrets.ALLOWED_HOSTS }}
@@ -36,5 +39,5 @@ jobs:
           STATIC_URL: ${{ secrets.STATIC_URL }}
           STATIC_ROOT: ${{ secrets.STATIC_ROOT }}
         run: |
-          podman build -f Containerfile -t public.ecr.aws/x7a1r0o7/$ECR_REPOSITORY:$IMAGE_TAG .
-          podman push public.ecr.aws/x7a1r0o7/$ECR_REPOSITORY:$IMAGE_TAG
+          podman build -f Containerfile -t $REGISTRY/x7a1r0o7/$ECR_REPOSITORY:$IMAGE_TAG .
+          podman push $REGISTRY/x7a1r0o7/$ECR_REPOSITORY:$IMAGE_TAG
