--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -41,3 +41,13 @@ jobs:
         run: |
           podman build -f Containerfile -t $REGISTRY/x7a1r0o7/$ECR_REPOSITORY:$IMAGE_TAG .
           podman push $REGISTRY/x7a1r0o7/$ECR_REPOSITORY:$IMAGE_TAG
+
+      - name: Update values.yaml
+        run: |
+          cd helm
+          sed -i 's|APP_VERSION:.*|APP_VERSION: '${{ github.sha }}'|' values.yaml 
+          git config --global user.name 'GitHub Actions'
+          git config --global user.email 'actions@github.com'
+          git add values.yaml
+          git commit -m "Update values.yaml"
+          git push
