--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -7,9 +7,21 @@ jobs:
   Build:
     name: Build
     runs-on: ubuntu-latest
-    steps:
+    steps:  
       - name: Checkout
         uses: actions/checkout@v2
+
+      - name: Make envfile
+        uses: SpicyPizza/create-envfile@v2.0
+        with:
+          envkey_ALLOWED_HOSTS: ${{ secrets.ALLOWED_HOSTS }}
+          envkey_DATABASE_URL: ${{ secrets.DATABASE_URL }}
+          envkey_STATIC_URL: ${{ secrets.STATIC_URL }}
+          envkey_STATIC_ROOT: ${{ secrets.STATIC_ROOT }}
+          directory: .
+          file_name: .env
+          fail_on_empty: false
+          sort_keys: false
 
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v1
@@ -39,7 +51,7 @@ jobs:
           STATIC_URL: ${{ secrets.STATIC_URL }}
           STATIC_ROOT: ${{ secrets.STATIC_ROOT }}
         run: |
-          podman build -f Containerfile -t $REGISTRY/x7a1r0o7/$ECR_REPOSITORY:$IMAGE_TAG .
+          podman build --env=DATABASE_URL --env=ALLOWED_HOSTS --env=STATIC_URL --env=STATIC_ROOT -f Containerfile -t $REGISTRY/x7a1r0o7/$ECR_REPOSITORY:$IMAGE_TAG .
           podman push $REGISTRY/x7a1r0o7/$ECR_REPOSITORY:$IMAGE_TAG
 
       - name: Update values.yaml
