--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -18,7 +18,7 @@ jobs:
           envkey_DATABASE_URL: ${{ secrets.DATABASE_URL }}
           envkey_STATIC_URL: ${{ secrets.STATIC_URL }}
           envkey_STATIC_ROOT: ${{ secrets.STATIC_ROOT }}
-          directory: .
+          directory: /UCF-Announcements-Django/
           file_name: .env
           fail_on_empty: false
           sort_keys: false
@@ -51,7 +51,7 @@ jobs:
           STATIC_URL: ${{ secrets.STATIC_URL }}
           STATIC_ROOT: ${{ secrets.STATIC_ROOT }}
         run: |
-          podman build --env=DATABASE_URL --env=ALLOWED_HOSTS --env=STATIC_URL --env=STATIC_ROOT -f Containerfile -t $REGISTRY/x7a1r0o7/$ECR_REPOSITORY:$IMAGE_TAG .
+          podman build -f Containerfile -t $REGISTRY/x7a1r0o7/$ECR_REPOSITORY:$IMAGE_TAG .
           podman push $REGISTRY/x7a1r0o7/$ECR_REPOSITORY:$IMAGE_TAG
 
       - name: Update values.yaml
