--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -18,7 +18,7 @@ jobs:
           envkey_DATABASE_URL: ${{ secrets.DATABASE_URL }}
           envkey_STATIC_URL: ${{ secrets.STATIC_URL }}
           envkey_STATIC_ROOT: ${{ secrets.STATIC_ROOT }}
-          directory: /UCF-Announcements-Django/
+          directory: ./UCF-Announcements-Django/
           file_name: .env
           fail_on_empty: false
           sort_keys: false
