--- a/helm/values.yaml
+++ b/helm/values.yaml
@@ -44,11 +44,12 @@ service:
   port: 80
 
 ingress:
-  enabled: false
+  enabled: true
   className: ""
-  annotations: {}
-    # kubernetes.io/ingress.class: nginx
-    # kubernetes.io/tls-acme: "true"
+  annotations: {
+    kubernetes.io/ingress.class: nginx
+    kubernetes.io/tls-acme: "true"
+  }
   hosts:
     - host: chart-example.local
       paths:
