--- a/helm/values.yaml
+++ b/helm/values.yaml
@@ -46,10 +46,9 @@ service:
 ingress:
   enabled: true
   className: ""
-  annotations: {
+  annotations:
     kubernetes.io/ingress.class: nginx
     kubernetes.io/tls-acme: "true"
-  }
   hosts:
     - host: chart-example.local
       paths:
