--- a/helm/templates/service.yaml
+++ b/helm/templates/service.yaml
@@ -4,6 +4,9 @@ metadata:
   name: {{ include "helm.fullname" . }}
   labels:
     {{- include "helm.labels" . | nindent 4 }}
+  annotations:
+    service.beta.kubernetes.io/aws-load-balancer-type: "external"
+    service.beta.kubernetes.io/aws-load-balancer-nlb-target-type: "ip"
 spec:
   type: {{ .Values.service.type }}
   ports:
