--- a/helm/templates/service.yaml
+++ b/helm/templates/service.yaml
@@ -10,8 +10,11 @@ spec:
   type: {{ .Values.service.type }}
   ports:
     - port: {{ .Values.service.port }}
-      targetPort: http
+      targetPort: 8000
       protocol: TCP
       name: http
+    - port: 443
+      name:  https
+      targetPort: 8000
   selector:
     {{- include "helm.selectorLabels" . | nindent 4 }}
