--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -7,7 +7,7 @@ on:
       - stages/qa
       - stages/prod
     paths:
-      - 'helm'
+      - 'helm/**'
 
 jobs:
   release:
@@ -22,6 +22,6 @@ jobs:
       - name: Run chart-releaser
         uses: helm/chart-releaser-action@v1.6.0
         with:
-          charts_dir: helm/
+          charts_dir: helm
         env:
           CR_TOKEN: '${{ secrets.CR_TOKEN }}'
