--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -8,16 +8,37 @@ on:
       - stages/prod
 
 jobs:
-  release:
+  build:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
-        uses: actions/checkout@v1
-      - name: Configure Git
+        uses: actions/checkout@v2
+
+      - name: Set up Helm
+        uses: azure/setup-helm@v1
+        with:
+          version: v3.7.0
+
+      - name: Package Helm chart
         run: |
-          git config user.name "$GITHUB_ACTOR"
-          git config user.email "$GITHUB_ACTOR@users.noreply.github.com"
-      - name: Run chart-releaser
-        uses: helm/chart-releaser-action@v1.6.0
+          helm package ./helm
+          mkdir -p helm-repo
+          mv *.tgz helm-repo/
+
+      - name: Create index.yaml
+        run: |
+          cd helm-repo
+          helm repo index . --url https://ucf.github.io/ucf-announcements-django/helm-repo
+
+      - name: Deploy to Github Pages
+        run: |
+          git config --global user.name "github-actions[bot]"
+          git config user.email "github-actions[bot]@users.noreply.github.com"
+          git checkout --orphan gh-pages
+          git reset --hard
+          cp -r helm-repo/* .
+          git add .
+          git commit -m "Deploy Helm chart"
+          git push -f origin gh-pages
         env:
-          CR_TOKEN: '${{ secrets.CR_TOKEN }}'
+          GITHUB_TOKEN: '${{ secrets.CR_TOKEN }}'
