--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -27,16 +27,17 @@ jobs:
 
       - name: Create index.yaml
         run: |
-          cd helm-repo
-          helm repo index . --url https://ucf.github.io/ucf-announcements-django/helm-repo
+          helm repo index . --url https://ucf.github.io/ucf-announcements-django/
 
       - name: Deploy to Github Pages
         run: |
           git config --global user.name "github-actions[bot]"
           git config user.email "github-actions[bot]@users.noreply.github.com"
+          git fetch
           git checkout --orphan gh-pages
           git reset --hard
           cp -r helm-repo/* .
+          rm -rf helm-repo
           git add .
           git commit -m "Deploy Helm chart"
           git push -f origin gh-pages
