--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -22,8 +22,7 @@ jobs:
       - name: Package Helm chart
         run: |
           helm package ./helm
-          mkdir -p helm-repo
-          mv *.tgz helm-repo/
+          mv *.tgz .
 
       - name: Create index.yaml
         run: |
@@ -36,7 +35,7 @@ jobs:
           git fetch
           git checkout --orphan gh-pages
           git reset --hard
-          cp -r helm-repo/* .
+          cp -r ../helm-repo/* .
           rm -rf helm-repo
           git add .
           git commit -m "Deploy Helm chart"
