--- a/.github/workflows/qa.yaml
+++ b/.github/workflows/qa.yaml
@@ -47,7 +47,7 @@ jobs:
         id: build-image
         env:
           REGISTRY: ${{ steps.login-ecr-public.outputs.registry }}
-          ECR_REPOSITORY: announcements
+          ECR_REPOSITORY: announcements-qa
           IMAGE_TAG: ${{ steps.get-commit-hash.outputs.commit-hash }}
           ALLOWED_HOSTS: ${{ secrets.ALLOWED_HOSTS }}
           DATABASE_URL: ${{ secrets.DATABASE_URL }}
