--- a/.github/workflows/dev.yaml
+++ b/.github/workflows/dev.yaml
@@ -30,11 +30,10 @@ jobs:
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           aws-region: us-east-1
 
-      - name: Login to Amazon ECR Public
-        id: login-ecr-public
+      - name: Login to Amazon ECR
+        id: login-ecr
         uses: aws-actions/amazon-ecr-login@v2
-        with:
-          registry-type: public
+        
 
       - name: Get commit hash
         id: get-commit-hash
