--- a/.github/workflows/qa.yaml
+++ b/.github/workflows/qa.yaml
@@ -15,7 +15,7 @@ jobs:
         uses: SpicyPizza/create-envfile@v2.0
         with:
           envkey_ALLOWED_HOSTS: ${{ secrets.ALLOWED_HOSTS }}
-          envkey_DATABASE_URL: ${{ secrets.DATABASE_URL }}
+          envkey_DATABASE_URL: ${{ secrets.QA_DATABASE_URL }}
           envkey_STATIC_URL: ${{ secrets.STATIC_URL }}
           envkey_STATIC_ROOT: ${{ secrets.STATIC_ROOT }}
           directory: .
@@ -47,7 +47,7 @@ jobs:
           ECR_REPOSITORY: announcements-dev
           IMAGE_TAG: ${{ steps.get-commit-hash.outputs.commit-hash }}
           ALLOWED_HOSTS: ${{ secrets.ALLOWED_HOSTS }}
-          DATABASE_URL: ${{ secrets.DATABASE_URL }}
+          DATABASE_URL: ${{ secrets.QA_DATABASE_URL }}
           STATIC_URL: ${{ secrets.STATIC_URL }}
           STATIC_ROOT: ${{ secrets.STATIC_ROOT }}
         run: |
