--- a/.github/workflows/qa.yaml
+++ b/.github/workflows/qa.yaml
@@ -30,12 +30,10 @@ jobs:
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           aws-region: us-east-1
 
-      - name: Login to Amazon ECR Public
+      - name: Login to Amazon ECR 
         id: login-ecr-public
         uses: aws-actions/amazon-ecr-login@v2
-        with:
-          registry-type: public
-
+        
       - name: Get commit hash
         id: get-commit-hash
         run: echo "::set-output name=commit-hash::$(git rev-parse --short HEAD)"
